# QPreferences

./: CMakeLists.txt  README.md
include/: QJsonModel.h  QJsonTreeItem.h  QJsonWidget.h  QPreferences.hpp  QPreferences_global.h
src/: QJsonModel.cpp  QJsonTreeItem.cpp  QJsonWidget.cpp
